18058
This is a regression from 2.10.0

{code}
 $ ~/Downloads/scala-2.10.1-RC2/bin/scalac -d /tmp fred.scala 
fred.scala:4: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: scala.util.Either[Nothing,(String, String)]
      (a, b) <- foo.right
      ^
fred.scala:6: error: not found: value a
      a + b
      ^
two errors found


On Tue, Mar 5, 2013 at 6:20 PM, Fredrik Ekholdt wrote:
Hey guys!

This fails in 2.10.1-20130225-100 (3.0-RC1) but not when compiling in sbt with 2.10.0 - is that expected?

object Foo {
    val foo: Either[String, (String, String)] = Left("")
    for {
      (a, b) <- foo.right
    } yield {
      a + b
    }
}
{code}
